--- a/templates/csvexport.html
+++ b/templates/csvexport.html
@@ -57,8 +57,78 @@
 </table>
 
 </td>
-<td><{$col2}></td>
-<td><{$col3}></td>
+<td>
+<table class="outer"><TR><th><{$oscmem_cvsexport_customfields}></th></TR>
+<{foreach item=customfield from=$custfieldarr}>
+<tr valign="top">
+<td ><input type="checkbox" id="<{$customfield.id}>" name="<{$customfield.name}>" value="<{$customfield.value}>"/>
+<{$customfield.field_name}>
+</td>
+</tr>
+<{/foreach}>
+</table>
+</td>
+<td>
+<tr valign='top' align='left'>
+<td><{$oscmem_filters}></td>
+<td><select  size='1' name='sfilters' id='class'>
+<option value='<{$oscmem_fromfilterbelow}>'><{$oscmem_fromfilterbelow}></option>
+<option value='<{$oscmem_fromcart}>'><{$oscmem_fromcart}></option>
+</select>
+</tr>
+<tr valign='top' align='left'>
+<td><{$oscmem_classificationstoexport}></td>
+<td><select  size='5' name='sclassifications[]' id='class' multiple='multiple'>
+<{foreach item=option from=$option_array}>
+<option value='<{$option.id}>'><{$option.name]></option>
+<{/foreach}>
+</select></td></tr>
+<tr valign='top' align='left'>
+<td><{$oscmem_rolestoexport}></td>
+<td><select  size='5' name='srole[]' id='class' multiple='multiple'>
+<{foreach item=role items=$role_array}>
+<option value='<{$role.id}>'><{$role.name}></option>
+</{foreach>
+</select></td></tr>
+<tr valign='top' align='left'>
+<td><{$oscmem_gender}></td>
+<td><select  size='1' name='gender' id='gender'>
+<{foreach item=gender items=$gender_array}>
+<option value='<{$gender.id}>'><{$gender.name}></option>
+</{foreach>
+</select></td></tr>
+<tr valign='top' align='left'>
+<td><td></td>
+<td><select  size='5' name='group[]' id='class' multiple='multiple'>
+<{foreach item=group from=$groups_array}>
+<option value='<{$group.id}>'><{$group.name}></option>
+</{foreach>
+</select></td></tr>
+<tr valign='top' align='left'>
+<td><{$oscmem_membershipdate}></td>
+<{$memberdatefrom}>
+<{$memberdateto}>
+</td></tr>
+<tr valign='top' align='left'>
+<td>Birthday</td><td>From&nbsp;<input size="15" value="YYYY/MM/DD" id="calendar-field-3" type="text" name="birthdayfrom" /><a href="#" id="calendar-trigger-3"><img align="middle" border="0" src="http://localhost/xoopsdev/class/calendar/img.gif" alt="" /></a><script type="text/javascript">Calendar.setup({"date":1161085673,"ifFormat":"%Y/%m/%d","daFormat":"%Y/%m/%d","firstDay":1,"showOthers":true,"showsTime":false,"inputField":"calendar-field-3","button":"calendar-trigger-3"});</script>
+<br>To&nbsp;<input size="15" value="YYYY/MM/DD" id="calendar-field-4" type="text" name="birthdayto" /><a href="#" id="calendar-trigger-4"><img align="middle" border="0" src="http://localhost/xoopsdev/class/calendar/img.gif" alt="" /></a><script type="text/javascript">Calendar.setup({"date":1161085673,"ifFormat":"%Y/%m/%d","daFormat":"%Y/%m/%d","firstDay":1,"showOthers":true,"showsTime":false,"inputField":"calendar-field-4","button":"calendar-trigger-4"});</script>
+</td></tr><tr valign='top' align='left'><td>Anniversary</td><td>From&nbsp;<input size="15" value="YYYY/MM/DD" id="calendar-field-5" type="text" name="anniversaryfrom" /><a href="#" id="calendar-trigger-5"><img align="middle" border="0" src="http://localhost/xoopsdev/class/calendar/img.gif" alt="" /></a><script type="text/javascript">Calendar.setup({"date":1161085673,"ifFormat":"%Y/%m/%d","daFormat":"%Y/%m/%d","firstDay":1,"showOthers":true,"showsTime":false,"inputField":"calendar-field-5","button":"calendar-trigger-5"});</script>
+<br>To&nbsp;<input size="15" value="YYYY/MM/DD" id="calendar-field-6" type="text" name="anniversaryto" /><a href="#" id="calendar-trigger-6"><img align="middle" border="0" src="http://localhost/xoopsdev/class/calendar/img.gif" alt="" /></a><script type="text/javascript">Calendar.setup({"date":1161085673,"ifFormat":"%Y/%m/%d","daFormat":"%Y/%m/%d","firstDay":1,"showOthers":true,"showsTime":false,"inputField":"calendar-field-6","button":"calendar-trigger-6"});</script>
+</td></tr><tr valign='top' align='left'><td>Date Entered</td><td>From&nbsp;<input size="15" value="YYYY/MM/DD" id="calendar-field-7" type="text" name="dateenteredfrom" /><a href="#" id="calendar-trigger-7"><img align="middle" border="0" src="http://localhost/xoopsdev/class/calendar/img.gif" alt="" /></a><script type="text/javascript">Calendar.setup({"date":1161085673,"ifFormat":"%Y/%m/%d","daFormat":"%Y/%m/%d","firstDay":1,"showOthers":true,"showsTime":false,"inputField":"calendar-field-7","button":"calendar-trigger-7"});</script>
+
+<br>To&nbsp;<input size="15" value="YYYY/MM/DD" id="calendar-field-8" type="text" name="dateenteredto" /><a href="#" id="calendar-trigger-8"><img align="middle" border="0" src="http://localhost/xoopsdev/class/calendar/img.gif" alt="" /></a><script type="text/javascript">Calendar.setup({"date":1161085673,"ifFormat":"%Y/%m/%d","daFormat":"%Y/%m/%d","firstDay":1,"showOthers":true,"showsTime":false,"inputField":"calendar-field-8","button":"calendar-trigger-8"});</script>
+</td></tr><tr valign='top' align='left'><td>Output Method</td><td><select  size='1' name='soutputmethod' id='class'>
+<option value='CSV Individual Records'>CSV Individual Records</option>
+<option value='CSV Combine Families'>CSV Combine Families</option>
+<option value='Add Individuals to Cart'>Add Individuals to Cart</option>
+</select></td></tr><tr valign='top' align='left'><td></td><td><input type='checkbox' id='bincompleteaddress0' name='bincompleteaddress' value='0' checked='checked' />Skip Incomplete Mail Addresses
+</td></tr><tr valign='top' align='left'><td></td><td><input type='checkbox' id='bnoenvelope0' name='bnoenvelope' value='0' checked='checked' />Skip Records with No Envelope Number<br>(Individual Records Only)
+</td></tr>
+
+
+
+
+</td>
 </tr>
 
 </table>
