--- a/templates/csvexport.html
+++ b/templates/csvexport.html
@@ -8,51 +8,51 @@
 <tr valign='top' align='left'><td></td><td><{$oscmem_cvsexport_infoinclude}>
 </td></tr>
 <tr><TD>&nbsp;</TD></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='btitle0' name='btitle' value='0' checked='checked' /><{$oscmem_title}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='btitle' name='btitle' value='0' checked='checked' /><{$oscmem_title}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bfirstname0' name='bfirstname' value='0' checked='checked' /><{$oscmem_firstname}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bfirstname' name='bfirstname' value='0' checked='checked' /><{$oscmem_firstname}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='baddress10' name='baddress1' value='0' checked='checked' /><{$oscmem_address}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='baddress' name='baddress1' value='0' checked='checked' /><{$oscmem_address}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcity0' name='bcity' value='0' checked='checked' /><{$oscmem_city}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcity' name='bcity' value='0' checked='checked' /><{$oscmem_city}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bstate0' name='bstate' value='0' checked='checked' /><{$oscmem_state}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bstate' name='bstate' value='0' checked='checked' /><{$oscmem_state}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bpost0' name='bpost' value='0' checked='checked' /><{$oscmem_post}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bpost' name='bpost' value='0' checked='checked' /><{$oscmem_post}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcountry0' name='bcountry' value='0' checked='checked' /><{$oscmem_country}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcountry' name='bcountry' value='0' checked='checked' /><{$oscmem_country}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bhomephone0' name='bhomephone' value='0' checked='checked'/>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bhomephone' name='bhomephone' value='0' checked='checked'/>
 <{$oscmem_homephone}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bworkphone0' name='bworkphone' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bworkphone' name='bworkphone' value='0' checked='checked' />
 <{$oscmem_workphone}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcellphone0' name='bcellphone' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcellphone' name='bcellphone' value='0' checked='checked' />
 <{$oscmem_cellphone}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bemail0' name='bemail' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bemail' name='bemail' value='0' checked='checked' />
 <{$oscmem_email}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='otheremail0' name='otheremail' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='otheremail' name='otheremail' value='0' checked='checked' />
 <{$oscmem_otheremail}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='benvelope0' name='benvelope' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='benvelope' name='benvelope' value='0' checked='checked' />
 <{$oscmem_envelopenumber}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bmembershipdate0' name='bmembershipdate' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bmembershipdate' name='bmembershipdate' value='0' checked='checked' />
 <{$oscmem_membershipdate}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bbirthanniversary0' name='bbirthanniversary' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bbirthanniversary' name='bbirthanniversary' value='0' checked='checked' />
 <{$oscmem_csv_birthanniversary}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bagemarried0' name='bagemarried' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bagemarried' name='bagemarried' value='0' checked='checked' />
 <{$oscmem_csv_ageyearsmarried}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bfamilyrole0' name='bfamilyrole' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bfamilyrole' name='bfamilyrole' value='0' checked='checked' />
 <{$oscmem_csv_familyrole}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bfamilyname0' name='bfamilyname' value='0' checked='checked' />
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bfamilyname' name='bfamilyname' value='0' checked='checked' />
 <{$oscmem_csv_familyname}>
 </td></tr>
 </table>
