--- a/templates/csvexport.html
+++ b/templates/csvexport.html
@@ -8,19 +8,9 @@
 <tr valign='top' align='left'><td></td><td><{$oscmem_cvsexport_infoinclude}>
 </td></tr>
 <tr><TD>&nbsp;</TD></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='btitle' name='btitle' value='0' checked='checked' /><{$oscmem_title}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bmembername' name='bmembername' value='0' checked='checked' /><{$oscmem_membername}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bfirstname' name='bfirstname' value='0' checked='checked' /><{$oscmem_firstname}>
-</td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='baddress' name='baddress1' value='0' checked='checked' /><{$oscmem_address}>
-</td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcity' name='bcity' value='0' checked='checked' /><{$oscmem_city}>
-</td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bstate' name='bstate' value='0' checked='checked' /><{$oscmem_state}>
-</td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bpost' name='bpost' value='0' checked='checked' /><{$oscmem_post}>
-</td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcountry' name='bcountry' value='0' checked='checked' /><{$oscmem_country}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='baddress' name='baddress' value='0' checked='checked' /><{$oscmem_address}>
 </td></tr>
 <tr valign='top' align='left'><td></td><td><input type='checkbox' id='bhomephone' name='bhomephone' value='0' checked='checked'/>
 <{$oscmem_homephone}>
@@ -33,9 +23,6 @@
 </td></tr>
 <tr valign='top' align='left'><td></td><td><input type='checkbox' id='bemail' name='bemail' value='0' checked='checked' />
 <{$oscmem_email}>
-</td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='otheremail' name='otheremail' value='0' checked='checked' />
-<{$oscmem_otheremail}>
 </td></tr>
 <tr valign='top' align='left'><td></td><td><input type='checkbox' id='benvelope' name='benvelope' value='0' checked='checked' />
 <{$oscmem_envelopenumber}>
