--- a/templates/csvexport.html
+++ b/templates/csvexport.html
@@ -12,14 +12,8 @@
 </td></tr>
 <tr valign='top' align='left'><td></td><td><input type='checkbox' id='baddress' name='baddress' value='0' checked='checked' /><{$oscmem_address}>
 </td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bhomephone' name='bhomephone' value='0' checked='checked'/>
-<{$oscmem_homephone}>
-</td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bworkphone' name='bworkphone' value='0' checked='checked' />
-<{$oscmem_workphone}>
-</td></tr>
-<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bcellphone' name='bcellphone' value='0' checked='checked' />
-<{$oscmem_cellphone}>
+<tr valign='top' align='left'><td></td><td><input type='checkbox' id='bphone' name='bphone' value='0' checked='checked'/>
+<{$oscmem_phone}>
 </td></tr>
 <tr valign='top' align='left'><td></td><td><input type='checkbox' id='bemail' name='bemail' value='0' checked='checked' />
 <{$oscmem_email}>
