--- a/templates/csvexport.html
+++ b/templates/csvexport.html
@@ -97,8 +97,11 @@
 </td></tr>
 <tr valign='top' align='left'>
 <td><{$oscmem_birthday}></td>
-<td><{$birthdayfrom}>
-<{$birthdayto}>
+<td>
+<table border="0">
+<TR><TD><{$oscmem_birthfrom}><TD><td><{$birthmonthfrom}></TD><td><{$birthyearfrom}></td></TR>
+<TR><TD><{$oscmem_birthto}><TD><td><{$birthmonthto}></TD><td><{$birthyearto}></{$birthyearto}></TR>
+</table>
 </td></tr>
 <tr valign='top' align='left'>
 <td><{$oscmem_anniversary}></td>
