--- a/templates/oscmembership_optionlist.html
+++ b/templates/oscmembership_optionlist.html
@@ -16,7 +16,7 @@
 <td width=10><input name="chk<{$optionitem.loopcount}>" value="<{$optionitem.optionid}>" type="checkbox"></td>
     <td><{$optionitem.optionsequence}></td>
     <td><{$optionitem.optionname}></td>
-    <td><a href='osclistdetailform.php?optionid=<{$optionitem.optionid}>'>Edit</a></td>
+    <td><a href='osclistdetailform.php?optionid=<{$optionitem.optionid}>&id=<{$id}>&action=save'><{$oscmem_edit}></a></td>
 
     </tr>
 <{/foreach}>
