--- a/templates/cartview.html
+++ b/templates/cartview.html
@@ -8,7 +8,7 @@
 <input type="submit" name="submit"  value="<{$oscmem_emptycarttogroup}>">&nbsp;<input type="submit" name="submit"  value="<{$oscmem_emptycarttofamily}>">
 </td></tr>
 <tr><th><input name="allbox" id="allbox" onclick="xoopsCheckAll('listform','allbox');" type="checkbox" value="Check All" /></th>
-<th><a href='index.php?sort=lastname' class=sort><{$oscmem_name}></a></th>
+<th><a href='viewcart.php?sort=lastname' class=sort><{$oscmem_name}></a></th>
 <th><{$oscmem_address}>?</th><th><{$oscmem_email}>?</th>
 </tr>
 <{foreach item=person from=$persons}>
