--- a/templates/familyview.html
+++ b/templates/familyview.html
@@ -16,22 +16,22 @@
 <th><a href='familylistform.php?sort=citystate' class=sort><{$oscmem_address}></a></th><th><a href='familylistform.php?sort=email' class=sort><{$oscmem_email}></a></th><th></th>
 </tr>
 <{foreach item=family from=$families}>
-<{ if $family.oddrow == true }>
+<{ if $family->getVar('oddrow') == true }>
 <tr class="odd">
 <{/if}>
-<{ if $family.oddrow == false }>
+<{ if $family->getVar('oddrow') == false }>
 <tr class="even">
 <{/if}>
 
-<td width=10><input name="chk<{$family.loopcount}>" value="<{$family.id}>" type="checkbox"></td>
-<td><{$family.familyname}></td>
-<td><{$family.city}>, <{$family.state}></td><td><{$family.email}></td>
+<td width=10><input name="chk<{$family->getVar('loopcount')}>" value="<{$family->getVar('id')}>" type="checkbox"></td>
+<td><{$family->getVar('familyname')}></td>
+<td><{$family->getVar('city')}>, <{$family->getVar('state')}></td><td><{$family->getVar('email')}></td>
 <td><{ if $is_perm_view }>
-<a href='familydetailview.php?id=<{$family.id}>'><{$oscmem_view}></a>
+<a href='familydetailview.php?id=<{$family->getVar('id')}>'><{$oscmem_view}></a>
 <{/if}>
 &nbsp;&nbsp;&nbsp;
 <{ if $is_perm_modify }>
-<a href='familydetailform.php?id=<{$family.id}>'><{$oscmem_edit}></a>
+<a href='familydetailform.php?id=<{$family->getVar('id')}>'><{$oscmem_edit}></a>
 <{/if}>
 </td>
 </tr>
