--- a/templates/memberview.html
+++ b/templates/memberview.html
@@ -20,21 +20,21 @@
 <th><{$oscmem_address}></th><th><{$oscmem_email}></th><th></th>
 </tr>
 <{foreach item=person from=$persons}>
-<{ if $person.oddrow == true }>
+<{ if $person->getVar('oddrow') == true }>
 <tr class="odd">
 <{/if}>
-<{ if $person.oddrow == false }>
+<{ if $person->getVar('oddrow') == false }>
 <tr class="even">
 <{/if}>
-<td width=10><input name="chk<{$person.loopcount}>" value="<{$person.id}>" type="checkbox"></td>
-<td><{$person.lastname}>, <{$person.firstname}></td>
-<td><{$person.city}>, <{$person.state}></td><td><{$person.email}></td>
+<td width=10><input name="chk<{$person->getVar('loopcount')}>" value="<{$person->getVar('id')}>" type="checkbox"></td>
+<td><{$person->getVar('lastname')}>, <{$person->getVar('firstname')}></td>
+<td><{$person->getVar('city')}>, <{$person->getVar('state')}></td><td><{$person->getVar('email')}></td>
 <td><{ if $is_perm_view }>
-<a href='persondetailview.php?id=<{$person.id}>'><{$oscmem_view}></a>
+<a href='persondetailview.php?id=<{$person->getVar('id')}>'><{$oscmem_view}></a>
 <{/if}>
 &nbsp;&nbsp;&nbsp;
 <{ if $is_perm_modify }>
-<a href='persondetailform.php?id=<{$person.id}>'><{$oscmem_edit}></a>
+<a href='persondetailform.php?id=<{$person->getVar('id')}>'><{$oscmem_edit}></a>
 <{/if}>
 </td>
 </tr>
