--- a/templates/reports.html
+++ b/templates/reports.html
@@ -13,7 +13,11 @@
 </a>
 </td>
 </tr>
-<tr ><TD colspan="4"><a href="MemberIDcard.php"><{$oscmem_membershipcard}>
+<tr ><TD colspan="4"><a href="MemberIDcard2.php"><{$oscmem_membershipcard}>
+</a>
+</td>
+</tr>
+<tr ><TD colspan="4"><a href="ChildIDcard.php"><{$oscmem_childcard}>
 </a>
 </td>
 </tr>
