--- a/templates/cartview.html
+++ b/templates/cartview.html
@@ -3,7 +3,7 @@
 <form name='listform' action='viewcart.php' method="POST">
 <input type=hidden name=sortprior value='<{$sort}>'>
 <table class='outer' >
-<tr ><TD colspan="4"><input type="submit" name="submit" value="<{$oscmem_generatelabels}>">&nbsp;</TD></tr>
+<tr ><TD colspan="4"><input type="submit" name="submit" value="<{$oscmem_generatelabels}>">&nbsp;<input type="submit" name="submit" value="<{$oscmem_generateemails}>"></TD></tr>
 <tr><td colspan="4"><input type="submit" name="submit" value="<{$oscmem_remove}>">&nbsp;<input type="submit" name="submit" value="<{$oscmem_emptycart}>">&nbsp;
 <input type="submit" name="submit"  value="<{$oscmem_emptycarttogroup}>">&nbsp;<input type="submit" name="submit"  value="<{$oscmem_emptycarttofamily}>">
 </td></tr>
