fixed error for export screen.  No group created caused drop down to error on screen.

--- a/templates/memberview.html
+++ b/templates/memberview.html
@@ -10,7 +10,9 @@
 <input type="submit" name="submit" value="<{$oscmem_applyfilter}>">&nbsp;
 <input type="submit" name="submit" value="<{$oscmem_clearfilter}>"></TD><td align="right">
 <input type="submit" name="submit" value="<{$oscmem_addmember}>">
-&nbsp;&nbsp;<input type="submit" name="submit"  value="<{$oscmem_addtocart}>"> 
+&nbsp;&nbsp;
+<input type="submit" name="submit" onclick="return confirm('<{$oscmem_confirmdelete}>');" value="<{$oscmem_deletemember}>">
+<input type="submit" name="submit"  value="<{$oscmem_addtocart}>"> 
 &nbsp;<input type="submit" name="submit" value="<{$oscmem_removefromcart}>">
 </td></tr>
 <tr>
