Finished family import.

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -5,15 +5,15 @@
 </a>
 </td>
 </tr>
-<tr ><TD colspan="4"><a href="CSVExport.php"><{$OSCMEM_csvexport}>
+<tr ><TD colspan="4"><a href="CSVExport.php"><{$OSCMEM_csvexport_individual}>
 </a>
 </td>
 </tr>
-<tr ><TD colspan="4"><a href="oscImport.php"><{$oscmem_csvimport}>
+<tr ><TD colspan="4"><a href="oscImport.php"><{$oscmem_csvimport_individual}>
 </a>
 </td>
 </tr>
-<tr ><TD colspan="4"><a href="oscImport_family_step1.php">test<{$oscmem_csvimport_family}>
+<tr ><TD colspan="4"><a href="oscImport_family_step1.php"><{$oscmem_csvimport_family}>
 </a>
 </td>
 </tr>
