--- a/templates/orphanselect.html
+++ b/templates/orphanselect.html
@@ -20,8 +20,9 @@
 <th><a href='orphanselect.php?sort=lastname' class=sort><{$oscmem_name}></a></th>
 <th><{$oscmem_address}></th>
 <th><{$oscmem_matchedfamilyname}></th>
-<th><{$oscmem_email}></th><th></th>
+<th><{$oscmem_email}></th>
 </tr>
+<{if $persons[0]->getVar('firstname')!="" }>
 <{foreach item=person from=$persons}>
 <{ if $person->getVar('oddrow') == true }>
 <tr class="odd">
@@ -29,24 +30,20 @@
 <{ if $person->getVar('oddrow') == false }>
 <tr class="even">
 <{/if}>
-<td width=10><input name="chk<{$person->getVar('loopcount')}>" id="chk<{$person->getVar('loopcount')}>" value="<{$person->getVar('id')}>" type="checkbox"></td>
+<td width=10><input name="chk<{$person->getVar('loopcount')}>" id="chk<{$person->getVar('loopcount')}>" value="<{$person->getVar('id')}>" type="checkbox">
+<input type="hidden" name="family<{$person->getVar('loopcount')}>" value="<{$person->getVar("famid")}>"/>
+</td>
 <td><{$person->getVar('lastname')}>, <{$person->getVar('firstname')}></td>
 <td><{$person->getVar('city')}>, <{$person->getVar('state')}></td>
 <td><{$person->getVar('familyname')}></td>
 <td><{$person->getVar('email')}></td>
-<td><{ if $is_perm_view }>
-<a href='persondetailview.php?id=<{$person->getVar('id')}>'><{$oscmem_view}></a>
-<{/if}>
-&nbsp;&nbsp;&nbsp;
-<{ if $is_perm_modify }>
-<a href='persondetailform.php?id=<{$person->getVar('id')}>'><{$oscmem_edit}></a>
-<{/if}>
-</td>
 </tr>
 <{/foreach}>
-
+<{else}>
+<tr class="odd"><TD colspan="5"><{$oscmem_noorphans}></TD></tr>
+<{/if}>
 </table>
-<input type="hidden" name="loopcount" value="<{$loopcount}>">
+<input type="hidden" name="totalloopcount" value="<{$totalloopcount}>">
 <!--
 Empty Cart<br>
 Empty Cart to Group<br>
