--- a/templates/familyview.html
+++ b/templates/familyview.html
@@ -1,4 +1,3 @@
-
 <h2 class=comTitle><{$title}></h2>
 
 <form action='familylistform.php?sort=<{$sort}>' name='listform' method="POST">
@@ -10,6 +9,7 @@
 <input type="submit" name="submit" value="<{$oscmem_applyfilter}>">&nbsp;
 <input type="submit" name="submit" value="<{$oscmem_clearfilter}>"></TD><td align="right">
 <input type="submit" name="submit" value="<{$oscmembership_addfamily}>">
+<input type="submit" name="submit" value="<{$oscmem_deletefamily}>">
 </td></tr>
 <tr><th><input name="allbox" id="allbox" onclick="xoopsCheckAll('listform','allbox');" type="checkbox" value="Check All" /></th>
 <th><a href='familylistform.php?sort=name' class=sort><{$oscmem_familyname}></a></th>
