--- a/templates/csvexport.html
+++ b/templates/csvexport.html
@@ -39,7 +39,7 @@
 </td></tr>
 </table>
 </td>
-<td>
+<td valign="top">
 <table class="outer"><TR valign='top' height=60><th><{$oscmem_cvsexport_customfields}></th></TR>
 <tr><TD>&nbsp;</TD></tr>
 <{foreach item=customfield from=$custfieldarr}>
@@ -57,8 +57,8 @@
 </table>
 </td>
 </tr>
-</table>
-</div>
+
+<tr><TD colspan="2">
 
 <table>
 <tr valign="top" height=60><Th colspan="2" align="center"><{$oscmem_filter}></TD></tr>
@@ -151,6 +151,12 @@
 <td></td>
 </tr>
 </table>
+
+</td>
+</tr>
+</table>
+</div>
+
 <{$submit}>
 
 </form>
