Checking of Vcard work.

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -13,6 +13,10 @@
 </a>
 </td>
 </tr>
+<tr ><TD colspan="4"><a href="oscImportvcard.php"><{$oscmem_vcardimport_individual}>
+</a>
+</td>
+</tr>
 <tr ><TD colspan="4"><a href="orphanselect.php"><{$oscmem_menu_orphanmatchup}>
 </a>
 </td>
