Checkin working code of alpha and page limit navigation.

--- a/templates/memberview.html
+++ b/templates/memberview.html
@@ -15,6 +15,7 @@
 <input type="submit" name="submit"  value="<{$oscmem_addtocart}>"> 
 &nbsp;<input type="submit" name="submit" value="<{$oscmem_removefromcart}>">
 </td></tr>
+<tr><TD colspan=2><input type="submit" name="submit" value="&lt;&lt;">&nbsp;<input type="submit" name="submit" value="&lt;">&nbsp;&nbsp;<input type="submit" name="submit" value="&gt;"><input type="submit" name="submit" value="&gt;&gt;"></TD></tr>
 <tr>
 <th>
 <input name="allbox" id="allbox" onclick="xoopsCheckAll('listform','allbox');" type="checkbox" value="Check All" /></th>
@@ -44,6 +45,7 @@
 
 </table>
 <input type="hidden" name="loopcount" value="<{$loopcount}>">
+<input type="hidden" name="page" value="<{$page}>">
 <!--
 Empty Cart<br>
 Empty Cart to Group<br>
