--- a/templates/memberview.html
+++ b/templates/memberview.html
@@ -6,7 +6,7 @@
 <table class='outer' >
 <tr><TD colspan="4">
 
-<input type="text" name="filter">&nbsp; 
+<input type="text" name="filter" value="<{$oscmem_filter}>">&nbsp; 
 <input type="submit" name="submit" value="<{$oscmem_applyfilter}>">&nbsp;
 <input type="submit" name="submit" value="<{$oscmem_clearfilter}>"></TD><td align="right">
 <input type="submit" name="submit" value="<{$oscmem_addmember}>">
