work in progress.

--- a/templates/oscMapUserstoMembership_step1.html
+++ b/templates/oscMapUserstoMembership_step1.html
@@ -5,8 +5,8 @@
 <table class='outer' >
 <tr>
 <td><select name="field1">
-<{foreach item=fieldname from=$fields}>
-<option value=""
+<{foreach item=fieldname from=$oscmem_person_keys}>
+<option value="<{$fieldname}>"
 <{/foreach}>
 
 
