--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,36 +1,41 @@
-<h2 class=comTitle><{$title}></h2>
+<table class='inner' >
+<tr ><Th colspan="2"><{$title}></Th></tr>
+<tr><Th><{$oscmem_report_label}></Th><th><{$oscmem_report_description}></th></tr>
+<tr class="odd" ><TD ><a href="DirectoryReports.php"><{$OSCMEM_directoryreport}>
+</a>
+</td><td><{$OSCMEM_directoryreport_description}></td>
+</tr>
+<tr class="even" ><TD ><a href="CSVExport.php"><{$OSCMEM_csvexport_individual}>
+</a>
+</td><td><{$OSCMEM_csvexport_individual_description}></td>
+</tr>
+<tr class="odd" ><TD ><a href="oscImport.php"><{$oscmem_csvimport_individual}>
+</a>
+</td><td><{$oscmem_csvimport_individual_description}></td>
+</tr>
+<tr class="even" ><TD ><a href="oscImportvcard.php"><{$oscmem_vcardimport_individual}>
+</a>
+</td><td><{$oscmem_vcardimport_individual_description}></td>
+</tr>
+<tr class="odd" ><TD ><a href="orphanselect.php"><{$oscmem_menu_orphanmatchup}>
+</a>
+</td><td><{$oscmem_menu_orphanmatchup_description}></td>
+</tr>
+<tr class="even" ><TD ><a href="oscImport_family_step1.php"><{$oscmem_csvimport_family}>
+</a>
+</td><td><{$oscmem_csvimport_family_description}></td>
+</tr>
+<tr class="odd" ><TD ><a href="MemberIDcard2.php"><{$oscmem_membershipcard}>
+</a>
+</td><td><{$oscmem_membershipcard_description}></td>
+</tr>
+<tr class="even" ><TD ><a href="ChildIDcard.php"><{$oscmem_childcard}>
+</a>
+</td><td><{$oscmem_childcard_description}></td>
+</tr>
+<tr class="odd" ><TD ><a href="setupgsync.php"><{$oscmem_menu_googlesync}>
+</a>
+</td><td><{$oscmem_googlecontactsync_description}></td>
+</tr>
 
-<table class='outer' >
-<tr ><TD colspan="4"><a href="DirectoryReports.php"><{$OSCMEM_directoryreport}>
-</a>
-</td>
-</tr>
-<tr ><TD colspan="4"><a href="CSVExport.php"><{$OSCMEM_csvexport_individual}>
-</a>
-</td>
-</tr>
-<tr ><TD colspan="4"><a href="oscImport.php"><{$oscmem_csvimport_individual}>
-</a>
-</td>
-</tr>
-<tr ><TD colspan="4"><a href="oscImportvcard.php"><{$oscmem_vcardimport_individual}>
-</a>
-</td>
-</tr>
-<tr ><TD colspan="4"><a href="orphanselect.php"><{$oscmem_menu_orphanmatchup}>
-</a>
-</td>
-</tr>
-<tr ><TD colspan="4"><a href="oscImport_family_step1.php"><{$oscmem_csvimport_family}>
-</a>
-</td>
-</tr>
-<tr ><TD colspan="4"><a href="MemberIDcard2.php"><{$oscmem_membershipcard}>
-</a>
-</td>
-</tr>
-<tr ><TD colspan="4"><a href="ChildIDcard.php"><{$oscmem_childcard}>
-</a>
-</td>
-</tr>
 </table>
