--- a/templates/memberview.html
+++ b/templates/memberview.html
@@ -15,7 +15,7 @@
 <input type="submit" name="submit"  value="<{$oscmem_addtocart}>"> 
 &nbsp;<input type="submit" name="submit" value="<{$oscmem_removefromcart}>">
 </td></tr>
-<tr><TD colspan=3><input type="submit" name="submit" value="&lt;&lt;">&nbsp;<input type="submit" name="submit" value="&lt;">&nbsp;&nbsp;<input type="submit" name="submit" value="&gt;"><input type="submit" name="submit" value="&gt;&gt;"></TD><td colspan="2"><input name="rowstodisplay" value="<{$oscmem_rowstodisplay}>"  size="3" >&nbsp;&nbsp;<{$oscmem_label_rowstodisplay}></td></tr>
+<tr><TD colspan=3><input type="submit" name="submit" value="<{$oscmem_menu_leftleftbutton}>">&nbsp;<input type="submit" name="submit" value="<{$oscmem_menu_leftbutton}>">&nbsp;&nbsp;<input type="submit" name="submit" value="<{$oscmem_menu_rightbutton}>"><input type="submit" name="submit" value="<{$oscmem_menu_rightrightbutton}>"></TD><td colspan="2"><input name="rowstodisplay" value="<{$oscmem_rowstodisplay}>"  size="3" >&nbsp;&nbsp;<{$oscmem_label_rowstodisplay}></td></tr>
 <tr>
 <th>
 <input name="allbox" id="allbox" onclick="xoopsCheckAll('listform','allbox');" type="checkbox" value="Check All" /></th>
